# compass

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ProjectInfo.md  README.md  install.ps1  install.sh
.claude/commands/: compass.md
.github/workflows/: ci.yml  release.yml
crates/compass-cli/: Cargo.toml
crates/compass-cli/src/: main.rs  registry.rs
crates/compass-cli/tests/: e2e.rs
crates/compass-core/: Cargo.toml
crates/compass-core/src/: lib.rs
crates/compass-engine/: Cargo.toml
crates/compass-engine/.mapai/: graph.json
crates/compass-engine/src/: cache.rs  index.rs  lib.rs  walk.rs  watch.rs
crates/compass-engine/tests/: calls.rs  incremental.rs
crates/compass-extract/: Cargo.toml
crates/compass-extract/src/: lib.rs
crates/compass-lang-c/: Cargo.toml
crates/compass-lang-c/src/: lib.rs
crates/compass-lang-csharp/: Cargo.toml
crates/compass-lang-csharp/src/: lib.rs
crates/compass-lang-go/: Cargo.toml
crates/compass-lang-go/src/: lib.rs
crates/compass-lang-java/: Cargo.toml
crates/compass-lang-java/src/: lib.rs
crates/compass-lang-kotlin/: Cargo.toml
crates/compass-lang-kotlin/src/: lib.rs
crates/compass-lang-php/: Cargo.toml
crates/compass-lang-php/src/: lib.rs
crates/compass-lang-python/: Cargo.toml
crates/compass-lang-python/src/: lib.rs
crates/compass-lang-ruby/: Cargo.toml
crates/compass-lang-ruby/src/: lib.rs
crates/compass-lang-rust/: Cargo.toml
crates/compass-lang-rust/src/: lib.rs
crates/compass-lang-template/: Cargo.toml
crates/compass-lang-template/src/: lib.rs
crates/compass-lang-typescript/: Cargo.toml
crates/compass-lang-typescript/src/: lib.rs
crates/compass-mcp/: Cargo.toml
crates/compass-mcp/src/: lib.rs
crates/compass-viz/: Cargo.toml
crates/compass-viz/assets/: app.css  app.js  cytoscape.umd.min.js  index.html  tokens.html
crates/compass-viz/src/: lib.rs  render.rs  server.rs  session_tokens.rs
crates/mapai-cli/: Cargo.toml
crates/mapai-cli/src/: main.rs  registry.rs
crates/mapai-cli/tests/: e2e.rs
crates/mapai-core/: Cargo.toml
crates/mapai-core/src/: lib.rs
crates/mapai-engine/: Cargo.toml
crates/mapai-engine/src/: cache.rs  index.rs  lib.rs  watch.rs
crates/mapai-extract/: Cargo.toml
crates/mapai-extract/src/: lib.rs
crates/mapai-lang-c/: Cargo.toml
crates/mapai-lang-c/src/: lib.rs
crates/mapai-lang-csharp/: Cargo.toml
crates/mapai-lang-csharp/src/: lib.rs
crates/mapai-lang-go/: Cargo.toml
crates/mapai-lang-go/src/: lib.rs
crates/mapai-lang-java/: Cargo.toml
crates/mapai-lang-java/src/: lib.rs
crates/mapai-lang-kotlin/: Cargo.toml
crates/mapai-lang-kotlin/src/: lib.rs
crates/mapai-lang-php/: Cargo.toml
crates/mapai-lang-php/src/: lib.rs
crates/mapai-lang-python/: Cargo.toml
crates/mapai-lang-python/src/: lib.rs
crates/mapai-lang-ruby/: Cargo.toml
crates/mapai-lang-ruby/src/: lib.rs
crates/mapai-lang-rust/: Cargo.toml
crates/mapai-lang-rust/src/: lib.rs
crates/mapai-lang-template/: Cargo.toml
crates/mapai-lang-template/src/: lib.rs
crates/mapai-lang-typescript/: Cargo.toml
crates/mapai-lang-typescript/src/: lib.rs
crates/mapai-mcp/: Cargo.toml
crates/mapai-mcp/src/: lib.rs
docs/architecture/: 01-requirements.md  02-architecture.md
docs/architecture/decisions/: 0001-implementation-language-rust.md  0002-pluggable-language-extractor-architecture.md  0003-extractor-registration-explicit-registry.md  0004-serde-placement-and-cache-format-versioning.md  0005-visualization-subsystem-and-local-server.md  0006-context-pre-injection.md
docs/architecture/diagrams/: containers.puml  context.puml  data-model.puml  flow-index.puml  flow-viz.puml
docs/benchmarks/: README.md  scaling.md
integrations/claude-code/: README.md
packaging/: README.md
packaging/homebrew/: compass.rb
packaging/scoop/: compass.json
tests/e2e/fixture/: main.go
tests/e2e/fixture-broken/: main.py
tests/e2e/fixture-c/: main.c  util.h
tests/e2e/fixture-csharp/src/Company/App/: Program.cs
tests/e2e/fixture-csharp/src/Company/Util/: Helper.cs
tests/e2e/fixture-java/src/com/example/app/: Main.java
tests/e2e/fixture-java/src/com/example/util/: Helper.java
tests/e2e/fixture-kotlin/src/com/example/app/: Main.kt
tests/e2e/fixture-kotlin/src/com/example/util/: Helper.kt
tests/e2e/fixture-php/: index.php  util.php
tests/e2e/fixture-py/app/: main.py  util.py
tests/e2e/fixture-ruby/: main.rb  util.rb
tests/e2e/fixture-rust/src/: main.rs  util.rs
tests/e2e/fixture-ts/src/: main.ts  util.ts
tests/e2e/fixture/util/: util.go
