[workspace]
resolver = "2"
members = [
    "crates/mapai-core",
    "crates/mapai-extract",
    "crates/mapai-engine",
    "crates/mapai-mcp",
    "crates/mapai-cli",
    "crates/mapai-lang-go",
    "crates/mapai-lang-python",
    "crates/mapai-lang-java",
    "crates/mapai-lang-csharp",
    "crates/mapai-lang-typescript",
    "crates/mapai-lang-rust",
    "crates/mapai-lang-kotlin",
]
# The new-language skeleton is intentionally NOT a workspace member: it must never
# link into the binary, register a fake language, or gate `cargo build --workspace`.
exclude = ["crates/mapai-lang-template"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QuirijnVanDerZanden/MapAI"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates (path-linked; versions tracked together)
mapai-core = { path = "crates/mapai-core" }
mapai-extract = { path = "crates/mapai-extract" }
mapai-engine = { path = "crates/mapai-engine" }
mapai-mcp = { path = "crates/mapai-mcp" }

# Shared external deps — pinned ONCE here so versions can't drift across crates.
# tree-sitter + grammars are added per the crate that needs them via `cargo add`
# and then promoted here; see ADR-0002 §Follow-ups.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Parsing engine + grammars — pinned ONCE so versions can't drift across crates.
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
tree-sitter-kotlin-ng = "1.1.0"

[profile.release]
# Release binary is the shipped artifact (A2). LTO + 1 codegen unit for size/speed;
# the explicit registry (ADR-0003) means this is safe for language registration.
lto = true
codegen-units = 1
strip = true
