[workspace]
resolver = "2"
members = [
    "crates/compass-core",
    "crates/compass-extract",
    "crates/compass-engine",
    "crates/compass-mcp",
    "crates/compass-viz",
    "crates/compass-cli",
    "crates/compass-lang-go",
    "crates/compass-lang-python",
    "crates/compass-lang-java",
    "crates/compass-lang-csharp",
    "crates/compass-lang-typescript",
    "crates/compass-lang-rust",
    "crates/compass-lang-kotlin",
    "crates/compass-lang-ruby",
    "crates/compass-lang-php",
    "crates/compass-lang-c",
]
# The new-language skeleton is intentionally NOT a workspace member: it must never
# link into the binary, register a fake language, or gate `cargo build --workspace`.
exclude = ["crates/compass-lang-template"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QuirijnPolinoco/compass"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates (path-linked; versions tracked together)
compass-core = { path = "crates/compass-core" }
compass-extract = { path = "crates/compass-extract" }
compass-engine = { path = "crates/compass-engine" }
compass-mcp = { path = "crates/compass-mcp" }
compass-viz = { path = "crates/compass-viz" }

# Shared external deps — pinned ONCE here so versions can't drift across crates.
# tree-sitter + grammars are added per the crate that needs them via `cargo add`
# and then promoted here; see ADR-0002 §Follow-ups.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
# Tiny synchronous HTTP/SSE server for the localhost visual map (ADR-0005).
tiny_http = "0.12.0"

# Parsing engine + grammars — pinned ONCE so versions can't drift across crates.
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-c = "0.24.2"

[profile.release]
# Release binary is the shipped artifact (A2). LTO + 1 codegen unit for size/speed;
# the explicit registry (ADR-0003) means this is safe for language registration.
lto = true
codegen-units = 1
strip = true
