[package]
name = "compass-engine"
description = "Compass — indexing orchestration: walk, index, cache, config."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
ignore = "0.4.26"
rayon = "1.12.0"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
notify-debouncer-mini = "0.7.0"

[dev-dependencies]
# Tests only: a real extractor to drive index() end-to-end (call resolution). Language crates
# are wired into the binary at the CLI composition root (ADR-0003); this dev-dep never links
# into the shipped artifact.
compass-lang-rust = { path = "../compass-lang-rust" }
compass-core.workspace = true
