[package]
name = "compass-extract"
description = "Compass — the stable Extractor trait, tree-sitter harness, and language registry."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
tree-sitter.workspace = true
tempfile = { version = "3", optional = true }

[features]
# Test-support: a MockResolutionContext for unit-testing language `resolve()` phases.
test-util = ["dep:tempfile"]
