[package]
name = "compass-lang-c"
description = "Compass — C language extractor (detection, grammar, extraction, include resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
