[package]
name = "compass-lang-java"
description = "Compass — Java language extractor (detection, grammar, extraction, import resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
