[package]
name = "compass-lang-php"
description = "Compass — PHP language extractor (detection, grammar, extraction, include resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true

[dev-dependencies]
compass-extract = { workspace = true, features = ["test-util"] }
