[package]
name = "compass-lang-ruby"
description = "Compass — Ruby language extractor (detection, grammar, extraction, require resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-ruby.workspace = true
