[package]
name = "compass-lang-rust"
description = "Compass — Rust language extractor (detection, grammar, extraction, module resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
compass-extract = { workspace = true, features = ["test-util"] }
