[package]
name = "compass-lang-typescript"
description = "Compass — TypeScript/JavaScript extractor (detection, grammar, extraction, import resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compass-core.workspace = true
compass-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
compass-extract = { workspace = true, features = ["test-util"] }
