[package]
name = "mapai-cli"
description = "MapAI — the `mapai` binary and composition root."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mapai"
path = "src/main.rs"

[dependencies]
mapai-core.workspace = true
mapai-extract.workspace = true
mapai-engine.workspace = true
mapai-mcp.workspace = true
# Language crates are optional + feature-gated; the composition root selects them.
mapai-lang-go = { path = "../mapai-lang-go", optional = true }

[features]
default = ["lang-go"]
lang-go = ["dep:mapai-lang-go"]
