[package]
name = "mapai-engine"
description = "MapAI — indexing orchestration: walk, index, cache, config."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mapai-core.workspace = true
mapai-extract.workspace = true
ignore = "0.4.26"
rayon = "1.12.0"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
