[package]
name = "mapai-lang-csharp"
description = "MapAI — C# language extractor (detection, grammar, extraction, import resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mapai-core.workspace = true
mapai-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-c-sharp.workspace = true
