[package]
name = "mapai-lang-php"
description = "MapAI — PHP language extractor (detection, grammar, extraction, include resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mapai-core.workspace = true
mapai-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true
