[package]
name = "mapai-lang-rust"
description = "MapAI — Rust language extractor (detection, grammar, extraction, module resolution)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mapai-core.workspace = true
mapai-extract.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
