# TEMPLATE — copy this crate to `crates/mapai-lang-<name>/`, rename it, fill the TODOs.
#
# It is intentionally EXCLUDED from the workspace (see the root Cargo.toml `exclude` list),
# so it never compiles, links into the binary, or gates CI. Once your real crate exists,
# add it to `[workspace.members]`, give the CLI an optional dependency + `lang-<name>`
# feature, and one `register(...)` line in `crates/mapai-cli/src/registry.rs`.
[package]
name = "mapai-lang-template"
description = "Template for creating a new MapAI language extractor."
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
mapai-core = { path = "../mapai-core" }
mapai-extract = { path = "../mapai-extract" }
tree-sitter = "0.26.9"
# 1. Add your tree-sitter grammar crate, e.g.:
# tree-sitter-rust = "0.24"
