[package]
name = "mapai-mcp"
description = "MapAI — MCP server exposing the map's query port over stdio."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mapai-core.workspace = true
rmcp = { version = "1.7.0", features = ["transport-io", "schemars"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-std"] }
serde_json.workspace = true
anyhow.workspace = true
